ci: pass secrets to reusable workflow 'Build'
Signed-off-by: Unai Martinez-Corral <umartinezcorral@antmicro.com>

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -2,6 +2,11 @@ name: Build packages
 
 on:
   workflow_call:
+    secrets:
+      ANACONDA_TOKEN:
+        description: 'Anaconda Token'
+      ANACONDA_USER:
+        description: 'Anaconda User'
 
 env:
   ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
